@@ -861,6 +861,17 @@ EngineController::eqUpdate() //SLOT
     }
 }
 
+bool
+EngineController::supportsFadeout() const
+{
+    return m_fader;
+}
+
+bool EngineController::supportsGainAdjustments() const
+{
+    return m_preamp;
+}
+
 //////////////////////////////////////////////////////////////////////////////////////////
 // PRIVATE SLOTS
 //////////////////////////////////////////////////////////////////////////////////////////
